@startuml OLAP_Diagram

!theme plain
hide stereotype

' Fact and Dimension Entities
entity "dim_specialty" {
  -- PK --
  * specialty_id : BIGSERIAL
  --
  specialty : VARCHAR(100)
}

entity "dim_doctor" {
  -- PK --
  * doctor_id : BIGSERIAL
  --
  fullname : VARCHAR(100)
  specialty : VARCHAR(100)
  phone : VARCHAR(25)
  email : VARCHAR(100)
  effective_date : DATE
  expiration_date : DATE
  iscurrent : BOOLEAN
}

entity "dim_patient" {
  -- PK --
  * patient_id : BIGSERIAL
  --
  fullname : VARCHAR(100)
  birthdate : DATE
  gender : CHAR(1)
  phone : VARCHAR(25)
  email : VARCHAR(100)
  address : VARCHAR(255)
}

entity "dim_insurance" {
  -- PK --
  * insurance_id : BIGSERIAL
  --
  patient_id : BIGINT
  provider : VARCHAR(100)
  policy_number : VARCHAR(50)
  expiration_date : DATE
}

entity "dim_datetime" {
  -- PK --
  * datetime_id : BIGSERIAL
  --
  full_datetime : DATE
  date : DATE
  year : INT
  month : INT
  day : INT
}

entity "dim_appointment" {
  -- PK --
  * appointment_id : BIGSERIAL
  --
  reason : VARCHAR(255)
  status : VARCHAR(50)
  patient_id : BIGINT
  doctor_id : BIGINT
  datetime_id : BIGINT
}

entity "fact_billing" {
  -- PK --
  * billing_id : BIGSERIAL
  --
  patient_id : BIGINT
  doctor_id : BIGINT
  datetime_id : BIGINT
  appointment_id : BIGINT
  amount : DECIMAL(10,2)
  billing_date : DATE
  status : VARCHAR(50)
}

entity "fact_satisfaction" {
  -- PK --
  * satisfaction_id : BIGSERIAL
  --
  patient_id : BIGINT
  doctor_id : BIGINT
  datetime_id : BIGINT
  appointment_id : BIGINT
  rating : INT
  comments : TEXT
  feedback_date : DATE
}

' Relationships
dim_appointment }o--|| dim_patient : "patient_id"
dim_appointment }o--|| dim_doctor : "doctor_id"
dim_appointment }o--|| dim_datetime : "datetime_id"

fact_billing }o--|| dim_patient : "patient_id"
fact_billing }o--|| dim_doctor : "doctor_id"
fact_billing }o--|| dim_datetime : "datetime_id"
fact_billing }o--|| dim_appointment : "appointment_id"

fact_satisfaction }o--|| dim_patient : "patient_id"
fact_satisfaction }o--|| dim_doctor : "doctor_id"
fact_satisfaction }o--|| dim_datetime : "datetime_id"
fact_satisfaction }o--|| dim_appointment : "appointment_id"

dim_insurance }o--|| dim_patient : "patient_id"

@enduml
